<resources>
    <string name="app_name">Articles</string>
    <string name="app_lang">en</string>

    <!-- .: 1. LAYOUTS :. -->
    <!-- Main Activity -->
    <string name="activity_main_btn_add">Add article</string>
    <string name="activity_main_btn_delete">Delete article</string>
    <string name="activity_main_btn_edit">Edit article</string>
    <string name="activity_main_txt_article_codi">Article code</string>
    <string name="activity_main_txt_article_description">Article description</string>
    <string name="activity_main_txt_article_family">Article family</string>
    <string name="activity_main_txt_article_stock">Article stock</string>
    <string name="activity_main_txt_article_price_no_iva">Article price without IVA</string>
    <string name="activity_main_txt_article_price_iva">Article price with IVA</string>
    <string name="activity_main_empty_article">Oops! \n It appears that there is no item created. \n Try creating one.</string>
    <string name="activity_main_stock_out">Report output</string>
    <string name="activity_main_stock_in">Report input</string>
    <string name="activity_main_btn_history">Access history</string>

    <!-- ArticleManage -->
    <string name="activity_article_manage_article_update_title">Article update</string>
    <string name="activity_article_manage_article_add_title">Add article</string>
    <string name="activity_article_manage_article_family_none">None</string>
    <string name="activity_article_manage_article_family_software">Software</string>
    <string name="activity_article_manage_article_family_hardware">Hardware</string>
    <string name="activity_article_manage_article_family_other">Other</string>
    <string name="activity_article_manage_btn_history">Access article history</string>

    <!-- StockManage -->
    <string name="activity_stock_manage_title">Stock manage</string>
    <string name="activity_stock_manage_search">Search</string>
    <string name="activity_stock_manage_quantity">Quantity</string>
    <string name="activity_stock_manage_date">Date</string>
    <string name="activity_stock_manage_article_founded">Article founded</string>
    <string name="activity_stock_manage_article_not_founded">Article not founded</string>

    <!-- MovementsHistory -->
    <string name="activity_movements_history_title">Movements history</string>
    <string name="activity_movement_history_all_movements">All movements</string>
    <string name="activity_movement_history_article_selected_movements">Article movements</string>
    <string name="activity_movement_history_start_date">Start date</string>
    <string name="activity_movement_history_final_date">Final date</string>
    <string name="activity_movement_history_row_type">Type</string>
    <string name="activity_movement_history_row_type_stock_in">Stock in</string>
    <string name="activity_movement_history_row_type_stock_out">Stock out</string>

    <!-- WeatherActivity -->
    <string name="activity_weather_title">Wheather</string>
    <string name="activity_weather_location">Location</string>
    <string name="activity_weather_icon">Weather icon</string>
    <string name="activity_weather_description">Description</string>
    <string name="activity_weather_temperature">Temperature</string>
    <string name="activity_weather_temperature_min">Minimum temperature</string>
    <string name="activity_weather_temperature_max">Maximum temperature</string>
    <string name="activity_weather_temperature_sensation">Thermic sensation</string>
    <string name="activity_weather_wind">Wind</string>
    <string name="activity_weather_humidity">Humidity</string>
    <string name="activity_weather_snow">Snow</string>
    <string name="activity_weather_clouds">Clouds</string>
    <string name="activity_weather_getting_info">Getting info</string>
    <string name="activity_weather_processing_info">Processing info</string>
    <string name="activity_weather_error_getting_info">Error getting info</string>
    <string name="activity_weather_not_location">Oops! \nThere\'s no location selected. \nTry to select one.</string>


    <!-- .: 2. MENUS :. -->
    <!-- Main Activity Menú -->
    <string name="activity_main_menu_btn_description">Filter by description</string>
    <string name="activity_main_menu_btn_stock">Filter by stock</string>
    <string name="activity_main_menu_btn_all">Show all</string>
    <string name="activity_main_menu_btn_weather">Wheather</string>
    <string name="activity_main_menu_btn_clear">Clear filters</string>
    <string name="activity_main_menu_btn_filter">Filter</string>
    <string name="activity_main_menu_btn_order">Order</string>

    <!-- .: 3. ALERTAS :. -->
    <!-- Explicación -->
    <string name="alert_info_delete_article">Are you sure you want to delete the article?</string>
    <string name="alert_info_title_delete_article">Article delete</string>
    <string name="alert_info_accept">Accept</string>
    <string name="alert_info_cancel">Cancel</string>
    <string name="alert_info_reset">Reset</string>
    <string name="alert_info_title_filter">Select filters</string>
    <string name="alert_info_title_select_description">Words in description:</string>
    <string name="alert_info_title_order">Order:</string>
    <string name="alert_info_order_by_date">Insert date (old ones first)</string>
    <string name="alert_info_order_by_date_desc">Insert date (newest first)</string>
    <string name="alert_info_order_by_code">Item code (A-Z)</string>
    <string name="alert_info_order_by_code_desc">Item code (Z-A)</string>
    <string name="alert_info_order_by_price">Price from lowest to highest</string>
    <string name="alert_info_order_by_price_desc">Price from high to low</string>

    <!-- Errores -->
    <string name="alert_error_cant_create_article">The article could not be created. Check the inputs.</string>
    <string name="alert_error_cant_update_article">The article could not be updated. Check the inputs.</string>
    <string name="alert_error_cant_delete_article">The article could not be deleted.</string>
    <string name="alert_error_cant_filter_articles">Articles could not be filtered.</string>
    <string name="alert_error_cant_create_movement">The movement could not be created. Check the inputs.</string>
    <string name="alert_error_cant_update_movement">The movement could not be updated. Check the inputs.</string>
    <string name="alert_error_invalid_location">Invalid location</string>

    <!-- Aciertos -->
    <string name="alert_success_article_created">The article has been generated successfully.</string>
    <string name="alert_success_article_updated">The article has been updated successfully.</string>
    <string name="alert_success_article_deleted">The article has been deleted successfully.</string>
    <string name="alert_success_processing_location">Success processing the data</string>
</resources>