<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_btn_filter"
        android:contentDescription="@string/activity_main_menu_btn_filter"
        android:icon="@drawable/ic_filter_btn_light"
        android:title="@string/activity_main_menu_btn_filter"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_btn_order"
        android:contentDescription="@string/activity_main_menu_btn_order"
        android:icon="@drawable/ic_order_btn_light"
        android:title="@string/activity_main_menu_btn_order"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_btn_clear"
        android:contentDescription="@string/activity_main_menu_btn_clear"
        android:icon="@drawable/ic_close_btn_light"
        android:title="@string/activity_main_menu_btn_clear"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_btn_history"
        android:contentDescription="@string/activity_main_btn_history"
        android:icon="@drawable/ic_history_light"
        android:title="@string/activity_main_btn_history"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_btn_stock_in"
        android:contentDescription="@string/activity_main_stock_in"
        android:icon="@drawable/ic_add_shopping_light"
        android:title="@string/activity_main_stock_in"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_btn_stock_out"
        android:contentDescription="@string/activity_main_stock_out"
        android:icon="@drawable/ic_remove_shopping_light"
        android:title="@string/activity_main_stock_out"
        app:showAsAction="ifRoom" />
</menu>