<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/activity_main_btn_delete"
            app:srcCompat="@drawable/ic_delete_btn" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_codi_article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:contentDescription="@string/activity_main_txt_article_codi"
                android:gravity="center"
                android:text="@string/activity_main_txt_article_codi"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <TextView
                android:id="@+id/txt_descripcio_article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/activity_main_txt_article_description"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/txt_article_estoc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:contentDescription="@string/activity_main_txt_article_stock"
                android:gravity="end"
                android:text="@string/activity_main_txt_article_stock"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/txt_article_preu_no_iva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:contentDescription="@string/activity_main_txt_article_price_no_iva"
                android:gravity="end"
                android:text="@string/activity_main_txt_article_price_no_iva"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/txt_article_preu_iva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:contentDescription="@string/activity_main_txt_article_price_iva"
                android:gravity="end"
                android:text="@string/activity_main_txt_article_price_iva"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>