<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_movement_article_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/activity_main_txt_article_codi"
                android:gravity="center"
                android:text="@string/activity_main_txt_article_codi"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/txt_movement_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/activity_stock_manage_date"
                android:gravity="center"
                android:text="@string/activity_stock_manage_date"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:ignore="RtlCompat" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_movement_quantity_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/activity_main_txt_article_codi"
                android:gravity="center"
                android:text="@string/activity_stock_manage_quantity"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:ignore="RtlCompat" />

            <TextView
                android:id="@+id/txt_movement_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:contentDescription="@string/activity_stock_manage_quantity"
                android:gravity="center"
                android:text="@string/activity_stock_manage_quantity"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                tools:ignore="RtlCompat" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_movement_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/activity_movement_history_row_type"
            android:gravity="center"
            android:text="@string/activity_movement_history_row_type"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>